Java 21 upgrade + Lombok @Builder toBuilder, @NonNull, @Accessors + switch patterns
- pom.xml, CLAUDE.md, README.md: Java 19 → 21
- SessionState: @Builder(toBuilder=true) — 13-arg constructor calls replaced with .toBuilder().field(...).build()
- DebtRemediationCommandHandler: @RequiredArgsConstructor (reordered fields), handle() converted to switch expression, accepted() uses toBuilder()
- SessionApplicationService.currentState(): uses toBuilder() instead of full 13-arg constructor
- DesktopSessionHostCoordinator.prepareRestoredStateForRebuild(): toBuilder().status(PAUSED).build() one-liner
- DesktopClientSessionController: @NonNull params replace Objects.requireNonNull() calls
- GameSessionState: @Getter @Accessors(fluent=true) replaces manual record-style getters
- SessionCommandSerializer.toJson(): if-else instanceof chain → switch statement (Java 21 pattern matching)
- InteractiveTurnEffectExecutor.executeNext(): if-else instanceof chain → switch statement
- SessionHttpServer: Executors.newVirtualThreadPerTaskExecutor() replaces platform thread pool (Java 21)
- HttpClientSessionUpdates: Thread.ofVirtual() for SSE reader thread

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>